# tinychess2

./: CMakeLists.txt  link64.ld  notes.txt  test_perft.cpp  tune_sts.cpp  tune_texel.cpp  uci.cpp
ch/: ch.cpp  ch.h  ch.natvis  ch_arch.hpp  ch_bb.hpp  ch_bb_avx.hpp  ch_bb_sse.hpp  ch_c_intf.hpp  ch_config.h  ch_config.hpp  ch_cpuid.hpp  ch_cpuid_impl.hpp  ch_evaluate.hpp  ch_evaluate_avx.hpp  ch_evaluate_sse.hpp  ch_evaluate_unaccel.hpp  ch_evaluator.hpp  ch_genmoves.hpp  ch_genmoves_avx.cpp  ch_genmoves_avx.hpp  ch_genmoves_impl.hpp  ch_genmoves_sse.cpp  ch_genmoves_sse.hpp  ch_genmoves_unaccel.cpp  ch_genmoves_unaccel.hpp  ch_hash.hpp  ch_hash.hpp.orig  ch_history_heuristic.hpp  ch_init.hpp  ch_init_impl.hpp  ch_internal.hpp  ch_magic.hpp  ch_magic_data.hpp  ch_magic_impl.hpp  ch_move.hpp  ch_move_impl.hpp  ch_move_list.hpp  ch_move_picker.hpp  ch_params.hpp  ch_position.hpp  (+6 more)
gui/: alldata.h  build_compressed_data.cpp  button.h  common.h  config.h  data.h  draw_helpers.h  font.h  format.h  game_ai_move.h  game_common.h  game_draw.h  game_play.h  game_player_move.h  icon.rc  img.h  link32.ld  main_menu.h  messagebox.h  run.h  settings.h  start_common.h  start_linux.c  start_linux.cpp  start_windows.c  start_windows.cpp  system.h  text.h  thread.h
stsrating/: STS_Rating.txt  STS_Rating_old.txt  run.bat  sts_all.epd  sts_rating_v13.1.py
texel/: tuned_params.txt
